--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <figcaption class="caption">
           <strong>Jason Slabbynck</strong><br>
           Architect-kunstenaar van site-specifieke constructies met herkenbare materialen. Paviljoens die spanningsvelden tussen vorm en materie oproepen en uitnodigen tot dialoog.
-          <a class="mono-link" href="jason-slabbynck.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Jason.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -118,7 +118,7 @@
         <figcaption class="caption">
           <strong>Alice Leens</strong><br>
           Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen.
-          <a class="mono-link" href="alice-leens.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Alice.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -127,7 +127,7 @@
         <figcaption class="caption">
           <strong>Camille Lemille</strong><br>
           Performance, drukwerk en AV. Taal en dagelijkse documenten als bron voor politieke en poëtische interventies.
-          <a class="mono-link" href="camille-lemille.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Camille.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -136,7 +136,7 @@
         <figcaption class="caption">
           <strong>Carole Louis</strong><br>
           Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek.
-          <a class="mono-link" href="carole-louis.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Carole.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -145,7 +145,7 @@
         <figcaption class="caption">
           <strong>Jonathan Van de Wal</strong><br>
           Schilder en assemblage-maker. Ruimtelijke interventies, beïnvloed door Broodthaers en alledaagse objecten.
-          <a class="mono-link" href="jonathan-van-de-wal.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Jonathan.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -154,7 +154,7 @@
         <figcaption class="caption">
           <strong>Pol Olivier</strong><br>
           Intieme portretten en sculpturen rond familie, met focus op de ruimte tussen mensen.
-          <a class="mono-link" href="pol-olivier.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Pol.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -163,7 +163,7 @@
         <figcaption class="caption">
           <strong>Nora Mahammed</strong><br>
           Poëtische, zintuiglijke installaties op het snijvlak van scenografie en architectuur.
-          <a class="mono-link" href="nora-mahammed.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Nora.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -172,7 +172,7 @@
         <figcaption class="caption">
           <strong>Jente Waerzeggers</strong><br>
           Fotograaf/muzikant. Ruwe, directe snapshots van de Belgische muziek- en kunstscene.
-          <a class="mono-link" href="jente-waerzeggers.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Jente.html">Lees meer</a>
         </figcaption>
       </figure>
 
@@ -182,7 +182,7 @@
         <figcaption class="caption">
           <strong>Niels Poiz</strong><br>
           Taal, performance en editie. Identiteit en popcultuur via appropriation en narratieve installaties.
-          <a class="mono-link" href="niels-poiz.html">Lees meer</a>
+          <a class="mono-link" href="paginas/artists/Niels.html">Lees meer</a>
         </figcaption>
       </figure>
     </div>
