--- a/index.html
+++ b/index.html
@@ -210,13 +210,23 @@
     <!-- ===============================
          LOV2030
     ================================= -->
-    <section id="lov">
-      <div class="container">
-        <div class="meta">LOV2030</div>
-        <h2>LOV2030</h2>
-        <p data-lang-nl="Vitrien maakt deel uit van de kandidatuur van Leuven voor Europese Culturele Hoofdstad 2030." data-lang-en="Vitrien is part of Leuven's candidacy for European Capital of Culture 2030.">Vitrien maakt deel uit van de kandidatuur...</p>
-      </div>
-    </section>
+
+<section id="lov">
+  <div class="container">
+    <div class="meta" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</div>
+    <h2>LOV2030</h2>
+    <p 
+      data-lang-nl="In 2030 wordt een Belgische stad Europese Culturele Hoofdstad. Leuven & Beyond stelt zich kandidaat als LOV2030. Het project staat voor verbinding en verbeelding: cultuur brengt mensen samen over bubbels, sectoren en grenzen heen. Vitrien maakt deel uit van dit verhaal en toont hoe kunst letterlijk in de stad kan opduiken, midden in het dagelijks leven." 
+      data-lang-en="In 2030, a Belgian city will become European Capital of Culture. Leuven & Beyond is a candidate as LOV2030. The project stands for connection and imagination: culture brings people together across bubbles, sectors and borders. Vitrien is part of this story, showing how art can literally appear in the city, right in the middle of everyday life."
+    >
+      In 2030 wordt een Belgische stad Europese Culturele Hoofdstad. Leuven & Beyond stelt zich kandidaat als LOV2030. Het project staat voor verbinding en verbeelding: cultuur brengt mensen samen over bubbels, sectoren en grenzen heen. Vitrien maakt deel uit van dit verhaal en toont hoe kunst letterlijk in de stad kan opduiken, midden in het dagelijks leven.
+    </p>
+    <p style="margin-top:10px">
+      <a class="mono-link" href="https://www.lov2030.be/nl/what-is-lov2030" target="_blank" rel="noopener">Meer over LOV2030</a>
+    </p>
+  </div>
+</section>
+
 
     <!-- ===============================
          CONTACT
