--- a/paginas/artists/Shailey.html
+++ b/paginas/artists/Shailey.html
@@ -72,7 +72,7 @@
         <!-- BIO -->
         <article>
           <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
-          <p data-lang-nl="Shailey Shah is een multidisciplinaire kunstenaar die video, sculptuur, schilderkunst en installaties inzet om materiaal, vorm, genderrollen en haar multiculturele achtergrond te onderzoeken. Ze studeerde onder meer beeldhouwkunst aan de KASK Antwerpen en NABA Milaan."
+          <p data-lang-nl="Shailey Shah is een multidisciplinaire kunstenaar die video, sculptuur, schilderkunst en installaties combineert. In haar werk onderzoekt ze thema’s als identiteit, gender en de spanning tussen persoonlijke en collectieve verhalen. Haar multiculturele achtergrond vormt een constante bron van inspiratie, zichtbaar in de manier waarop ze materialen en vormen met elkaar verweeft. Shailey creëert werelden waarin fragiliteit en kracht naast elkaar bestaan. Door middel van beelden en objecten nodigt ze de toeschouwer uit om vertrouwde aannames in vraag te stellen. Haar praktijk is tegelijk onderzoekend en intuïtief, en opent ruimte voor dialoog over wie we zijn en hoe we samenleven."
              data-lang-en="Shailey Shah is a multidisciplinary artist working across video, sculpture, painting and installation to explore materiality, form, gender roles and her multicultural background. She studied sculpture at the Royal Academy in Antwerp and NABA Milan.">
             Shailey Shah is een multidisciplinaire kunstenaar…
           </p>
