--- a/paginas/artists/Camille.html
+++ b/paginas/artists/Camille.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Camille Lemille — VITRIEN</title>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="../../assets/css/styles.css">
+</head>
+<body>
+  <!-- ============ HEADER ============ -->
+  <header>
+    <nav class="nav" aria-label="Hoofdnavigatie">
+      <a href="../../" class="brand">VITRIEN</a>
+      <div class="menu" role="menubar">
+        <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
+        <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+        <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
+        <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
+        <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
+        <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
+      </div>
+      <div class="lang-switch" aria-label="Taalwissel">
+        <button onclick="setLang('nl')" id="lang-nl" class="active">NL</button>|
+        <button onclick="setLang('en')" id="lang-en">EN</button>
+      </div>
+      <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
+        <span></span><span></span><span></span>
+      </button>
+    </nav>
+    <div class="drawer" id="drawer" aria-hidden="true">
+      <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
+      <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
+      <a href="../../index.html#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
+      <a href="../../index.html#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
+      <a href="../../index.html#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
+      <a href="../../index.html#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
+    </div>
+  </header>
+
+  <main id="top">
+    <!-- ============ HERO ============ -->
+    <section class="hero" style="min-height:auto; padding:60px 0 20px">
+      <div class="container">
+        <div class="meta" data-lang-nl="Kunstenaar" data-lang-en="Artist">Kunstenaar</div>
+        <h1>Camille Lemille</h1>
+        <p class="lead" data-lang-nl="Performance • Drukwerk • Audiovisueel" data-lang-en="Performance • Print • Audiovisual">
+          Performance • Drukwerk • Audiovisueel
+        </p>
+      </div>
+    </section>
+
+    <!-- ============ BREADCRUMB ============ -->
+    <section>
+      <div class="container">
+        <p class="meta" style="margin-top:-8px">
+          <a class="mono-link" href="../../index.html#kunstenaars" data-lang-nl="← terug naar overzicht" data-lang-en="← back to overview">← terug naar overzicht</a>
+        </p>
+      </div>
+    </section>
+
+    <!-- ============ BIO + STATEMENT ============ -->
+    <section>
+      <div class="container grid two-col">
+        <!-- BIO -->
+        <article>
+          <div class="meta" data-lang-nl="Biografie" data-lang-en="Biography">Biografie</div>
+          <p
+            data-lang-nl="Camille Lemille werkt op het snijvlak van performance, drukwerk en audiovisuele media. Ze gebruikt taal en documenten uit het dagelijks leven — formulieren, handleidingen, e-mails — als startpunt voor artistieke interventies. Haar werk beweegt tussen politiek en poëzie, waarbij de banaliteit van bureaucratie een nieuwe betekenis krijgt."
+            data-lang-en="Camille Lemille works at the intersection of performance, print and audiovisual media. She uses language and everyday documents — forms, manuals, emails — as a starting point for artistic interventions. Her practice shifts between politics and poetry, granting new meaning to the banality of bureaucracy."
+          >
+            Camille Lemille werkt op het snijvlak van performance…
+          </p>
+          <p
+            data-lang-nl="Ze studeerde onder meer aan LUCA School of Arts en werkte samen in collectieven die taal en beeld koppelen aan sociale praktijken."
+            data-lang-en="She studied at LUCA School of Arts and has collaborated in collectives linking language and image to social practices."
+          >
+            Ze studeerde onder meer aan LUCA School of Arts…
+          </p>
+
+          <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
+          <p>
+            <span data-lang-nl="Website" data-lang-en="Website">Website</span>:
+            <a class="mono-link" href="#" target="_blank" rel="noopener">link</a><br>
+            <span data-lang-nl="Contact" data-lang-en="Contact">Contact</span>:
+            <a class="mono-link" href="mailto:hallo@vitrien.be">hallo@vitrien.be</a>
+          </p>
+        </article>
+
+        <!-- STATEMENT -->
+        <article>
+          <div class="meta" data-lang-nl="Artist statement" data-lang-en="Artist statement">Artist statement</div>
+          <p
+            data-lang-nl="Mijn werk onderzoekt hoe taalstructuren onze perceptie sturen. Door banale documenten uit hun context te halen en te transformeren tot performance of visueel object, wil ik een ruimte openen waarin regels en conventies bevraagd worden."
+            data-lang-en="My work investigates how structures of language guide our perception. By removing banal documents from their context and transforming them into performance or visual objects, I aim to create a space where rules and conventions are questioned."
+          >
+            Mijn werk onderzoekt hoe taalstructuren onze perceptie sturen…
+          </p>
+        </article>
+      </div>
+    </section>
+
+    <!-- ============ CV / FEITEN ============ -->
+    <section>
+      <div class="container grid two-col">
+        <article>
+          <div class="meta" data-lang-nl="Opleiding" data-lang-en="Education">Opleiding</div>
+          <ul>
+            <li data-lang-nl="LUCA School of Arts — Performance" data-lang-en="LUCA School of Arts — Performance">LUCA School of Arts — Performance</li>
+          </ul>
+        </article>
+        <article>
+          <div class="meta" data-lang-nl="Selectie projecten" data-lang-en="Selected projects">Selectie projecten</div>
+          <ul>
+            <li data-lang-nl="2024 — Performance in Brussel" data-lang-en="2024 — Performance in Brussels">2024 — Performance in Brussel</li>
+            <li data-lang-nl="2023 — Drukwerkproject, Gent" data-lang-en="2023 — Print project, Ghent">2023 — Drukwerkproject, Gent</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <!-- ============ GALLERY ============ -->
+    <section>
+      <div class="container">
+        <div class="meta" data-lang-nl="Werk" data-lang-en="Works">Werk</div>
+        <div class="grid gallery">
+          <figure class="module">
+            <img src="../../assets/img/artists/Camille-01.jpg" alt="Werk 1 — Camille Lemille">
+            <figcaption class="caption">Titel werk 1 — jaar</figcaption>
+          </figure>
+          <figure class="module">
+            <img src="../../assets/img/artists/Camille-02.jpg" alt="Werk 2 — Camille Lemille">
+            <figcaption class="caption">Titel werk 2 — jaar</figcaption>
+          </figure>
+          <figure class="module">
+            <img src="../../assets/img/artists/Camille-03.jpg" alt="Werk 3 — Camille Lemille">
+            <figcaption class="caption">Titel werk 3 — jaar</figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <!-- ============ TERUGLINK ============ -->
+    <section>
+      <div class="container">
+        <a class="mono-link" href="../../index.html#kunstenaars" data-lang-nl="← terug naar alle kunstenaars" data-lang-en="← back to all artists">← terug naar alle kunstenaars</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-inner">
+      <div>© <span id="year"></span> Vitrien — Leuven</div>
+      <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="../../assets/js/app.js" defer></script>
+</body>
+</html>
 
