--- a/paginas/artists/Camille.html
+++ b/paginas/artists/Camille.html
@@ -76,8 +76,8 @@
           </p>
           <div class="meta" style="margin-top:20px">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">link</a><br>
-            Contact: <a class="mono-link" href="mailto:hallo@vitrien.be">hallo@vitrien.be</a>
+            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://camillelemille.be/</a><br>
+            Contact: <a class="mono-link" href="mailto:hallo@vitrien.be">camille.lemille@gmail.com</a>
           </p>
         </article>
 
