--- a/index.html
+++ b/index.html
@@ -21,39 +21,47 @@
   <!-- ===============================
        HEADER: merk, primaire navigatie, taalswitch
   ================================ -->
-  <header>
-    <nav class="nav" aria-label="Hoofdnavigatie">
-      <a href="#top" class="brand">VITRIEN</a>
-      <div class="menu" role="menubar">
-        <a href="#over" data-lang-nl="Over" data-lang-en="About">Over</a>
-        <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
-        <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
-        <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
-        <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
-        <a href="#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
-      </div>
-      
-<div class="lang-switch desktop-only" aria-label="Taalwissel">
-  <button onclick="setLang('nl')" id="lang-nl" class="active">NL</button>|
-  <button onclick="setLang('en')" id="lang-en">EN</button>
-</div>
+<header>
+  <nav class="nav" aria-label="Hoofdnavigatie">
+    <a href="#top" class="brand">VITRIEN</a>
 
-      <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
-        <span></span><span></span><span></span>
-      </button>
-    </nav>
-    <div class="drawer" id="drawer" aria-hidden="true">
-      <a href="#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
-      <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
-      <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
-      <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
-      <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
-      <a href="#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
-      <div class="lang-switch desktop-only" aria-label="Taalwissel">
-  <button onclick="setLang('nl')" id="lang-nl" class="active">NL</button>|
-  <button onclick="setLang('en')" id="lang-en">EN</button>
+    <div class="menu" role="menubar">
+      <a href="#over" data-lang-nl="Over" data-lang-en="About">Over</a>
+      <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
+      <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call">Open call</a>
+      <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</a>
+      <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030">LOV2030</a>
+      <a href="#contact" data-lang-nl="Contact" data-lang-en="Contact">Contact</a>
     </div>
-  </header>
+
+    <!-- Desktop taal-switch -->
+    <div class="lang-switch desktop-only" aria-label="Taalwissel">
+      <button onclick="setLang('nl')" class="active">NL</button> |
+      <button onclick="setLang('en')">EN</button>
+    </div>
+
+    <button class="burger" aria-label="Open menu" onclick="toggleDrawer()">
+      <span></span><span></span><span></span>
+    </button>
+  </nav>
+
+  <!-- Drawer (mobile) -->
+  <div class="drawer" id="drawer" aria-hidden="true">
+    <a href="#over" data-lang-nl="Over" data-lang-en="About" onclick="toggleDrawer()">Over</a>
+    <a href="#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues" onclick="toggleDrawer()">Data & locaties</a>
+    <a href="#opencall" data-lang-nl="Open call" data-lang-en="Open call" onclick="toggleDrawer()">Open call</a>
+    <a href="#kunstenaars" data-lang-nl="Kunstenaars" data-lang-en="Artists" onclick="toggleDrawer()">Kunstenaars</a>
+    <a href="#lov" data-lang-nl="LOV2030" data-lang-en="LOV2030" onclick="toggleDrawer()">LOV2030</a>
+    <a href="#contact" data-lang-nl="Contact" data-lang-en="Contact" onclick="toggleDrawer()">Contact</a>
+
+    <!-- Mobile taal-switch (let op: mobile-only en geen dubbele IDs) -->
+    <div class="lang-switch mobile-only" aria-label="Taalwissel">
+      <button onclick="setLang('nl')" class="active">NL</button> |
+      <button onclick="setLang('en')">EN</button>
+    </div>
+  </div>
+</header>
+
 
   <!-- ===============================
        HERO: claim + korte intro
