--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <!-- 7) Vip Concept -->
           <article class="location-card">
             <h3 class="location-name">Vip Concept</h3>
-            <p class="location-address">Adres volgt</p>
+            <p class="location-address">Bondgenotenlaan 145</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://www.instagram.com/vipconceptleuven/?hl=en" target="_blank" rel="noopener">Website</a></p>
           </article>
