--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <!-- 1) Wear Store -->
           <article class="location-card">
             <h3 class="location-name">Wear Store</h3>
-            <p class="location-address">bondgenoten54</p>
+            <p class="location-address">Bondgenotenlaan 54</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://wear-store.be/pages/our-stores" target="_blank" rel="noopener">Website</a></p>
           </article>
@@ -119,7 +119,7 @@
           <!-- 3) Folie Leuven -->
           <article class="location-card">
             <h3 class="location-name">Folie Leuven</h3>
-            <p class="location-address">Tiensestraat 39</p>
+            <p class="location-address">Rector De Somerplein 11</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://www.instagram.com/foliefashionleuven/" target="_blank" rel="noopener">Website</a></p>
           </article>
@@ -127,7 +127,7 @@
           <!-- 4) De Slegte Leuven -->
           <article class="location-card">
             <h3 class="location-name">De Slegte Leuven</h3>
-            <p class="location-address">Diestsestraat 72</p>
+            <p class="location-address">Bondgenotenlaan 47</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://www.deslegte.com/leuven/" target="_blank" rel="noopener">Website</a></p>
           </article>
