--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   ================================ -->
 <header>
   <nav class="nav" aria-label="Hoofdnavigatie">
-    <a href="#top" class="brand">VITRIEN</a>
+    <a href="#top" class="brand">
+  <img src="assets/img/logo.png" alt="Vitrien logo">
+</a>
+
 
     <div class="menu" role="menubar">
       <a href="#over" data-lang-nl="Over" data-lang-en="About">Over</a>
