--- a/paginas/artists/Jason.html
+++ b/paginas/artists/Jason.html
@@ -17,7 +17,9 @@
   <!-- ============ HEADER ============ -->
   <header>
     <nav class="nav" aria-label="Hoofdnavigatie">
-      <a href="../../" class="brand">VITRIEN</a>
+        <a href="#top" class="brand">
+  <img src="assets/img/logo.png" alt="Vitrien logo">
+</a>
       <div class="menu" role="menubar">
         <a href="../../index.html#over" data-lang-nl="Over" data-lang-en="About">Over</a>
         <a href="../../index.html#locaties" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</a>
