--- a/index.html
+++ b/index.html
@@ -189,99 +189,142 @@
     <!-- ===============================
          KUNSTENAARS
     ================================= -->
-   <section id="kunstenaars">
+  <!-- ===============================
+     KUNSTENAARS
+================================= -->
+<section id="kunstenaars">
   <div class="container">
     <div class="meta" data-lang-nl="Kunstenaars" data-lang-en="Artists">Kunstenaars</div>
     <h2 data-lang-nl="Deelnemende kunstenaars" data-lang-en="Participating artists">Deelnemende kunstenaars</h2>
 
     <div class="modules artists-grid">
+      <!-- Jason -->
       <figure class="module">
         <img src="assets/img/artists/Jason.jpg" alt="Werk van Jason Slabbynck">
         <figcaption class="caption">
           <strong>Jason Slabbynck</strong><br>
-          Architect-kunstenaar van site-specifieke constructies met herkenbare materialen. Paviljoens die spanningsvelden tussen vorm en materie oproepen en uitnodigen tot dialoog.
-          <a class="mono-link" href="paginas/artists/Jason.html">Lees meer</a>
+          <span data-lang-nl="Architect-kunstenaar van site-specifieke constructies met herkenbare materialen. Paviljoens die spanningsvelden tussen vorm en materie oproepen en uitnodigen tot dialoog."
+                data-lang-en="Architect-artist creating site-specific constructions with recognizable materials. Pavilions that trigger tensions between form and matter and invite dialogue.">
+            Architect-kunstenaar van site-specifieke constructies met herkenbare materialen. Paviljoens die spanningsvelden tussen vorm en materie oproepen en uitnodigen tot dialoog.
+          </span>
+          <a class="mono-link" href="paginas/artists/Jason.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Shailey -->
       <figure class="module">
         <img src="assets/img/artists/Shailey.jpg" alt="Werk van Shailey Shah">
         <figcaption class="caption">
           <strong>Shailey Shah</strong><br>
-          Multidisciplinair: video, sculptuur, schilderkunst, installaties. Onderzoekt identiteit, gender en haar multiculturele achtergrond via materiaal en vorm.
-          <a class="mono-link" href="paginas/artists/Shailey.html">Lees meer</a>
+          <span data-lang-nl="Multidisciplinair: video, sculptuur, schilderkunst, installaties. Onderzoekt identiteit, gender en haar multiculturele achtergrond via materiaal en vorm."
+                data-lang-en="Multidisciplinary: video, sculpture, painting, installations. Explores identity, gender and her multicultural background through material and form.">
+            Multidisciplinair: video, sculptuur, schilderkunst, installaties. Onderzoekt identiteit, gender en haar multiculturele achtergrond via materiaal en vorm.
+          </span>
+          <a class="mono-link" href="paginas/artists/Shailey.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Alice -->
       <figure class="module">
         <img src="assets/img/artists/Alice.jpg" alt="Werk van Alice Leens">
         <figcaption class="caption">
           <strong>Alice Leens</strong><br>
-          Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen.
-          <a class="mono-link" href="paginas/artists/Alice.html">Lees meer</a>
+          <span data-lang-nl="Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen."
+                data-lang-en="Reveals the inner structure of yarn and textiles. From line to volume, where craft and symbolism converge.">
+            Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen.
+          </span>
+          <a class="mono-link" href="paginas/artists/Alice.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Camille -->
       <figure class="module">
         <img src="assets/img/artists/Camille.jpg" alt="Werk van Camille Lemille">
         <figcaption class="caption">
           <strong>Camille Lemille</strong><br>
-          Performance, drukwerk en AV. Taal en dagelijkse documenten als bron voor politieke en poëtische interventies.
-          <a class="mono-link" href="paginas/artists/Camille.html">Lees meer</a>
+          <span data-lang-nl="Performance, drukwerk en AV. Taal en dagelijkse documenten als bron voor politieke en poëtische interventies."
+                data-lang-en="Performance, print and AV. Language and everyday documents as a source for political and poetic interventions.">
+            Performance, drukwerk en AV. Taal en dagelijkse documenten als bron voor politieke en poëtische interventies.
+          </span>
+          <a class="mono-link" href="paginas/artists/Camille.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Carole -->
       <figure class="module">
         <img src="assets/img/artists/Carole.jpg" alt="Werk van Carole Louis">
         <figcaption class="caption">
           <strong>Carole Louis</strong><br>
-          Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek.
-          <a class="mono-link" href="paginas/artists/Carole.html">Lees meer</a>
+          <span data-lang-nl="Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek."
+                data-lang-en="Tragicomic installations and performances that dissect social structures and clichés with playful aesthetics.">
+            Tragikomische installaties en performances die sociale structuren en clichés fileteren met speelse esthetiek.
+          </span>
+          <a class="mono-link" href="paginas/artists/Carole.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Jonathan -->
       <figure class="module">
         <img src="assets/img/artists/Jonathan.jpg" alt="Werk van Jonathan Van de Wal">
         <figcaption class="caption">
           <strong>Jonathan Van de Wal</strong><br>
-          Schilder en assemblage-maker. Ruimtelijke interventies, beïnvloed door Broodthaers en alledaagse objecten.
-          <a class="mono-link" href="paginas/artists/Jonathan.html">Lees meer</a>
+          <span data-lang-nl="Schilder en assemblage-maker. Ruimtelijke interventies, beïnvloed door Broodthaers en alledaagse objecten."
+                data-lang-en="Painter and assembler. Spatial interventions, influenced by Broodthaers and everyday objects.">
+            Schilder en assemblage-maker. Ruimtelijke interventies, beïnvloed door Broodthaers en alledaagse objecten.
+          </span>
+          <a class="mono-link" href="paginas/artists/Jonathan.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Pol -->
       <figure class="module">
         <img src="assets/img/artists/Pol.jpg" alt="Werk van Pol Olivier">
         <figcaption class="caption">
           <strong>Pol Olivier</strong><br>
-          Intieme portretten en sculpturen rond familie, met focus op de ruimte tussen mensen.
-          <a class="mono-link" href="paginas/artists/Pol.html">Lees meer</a>
+          <span data-lang-nl="Intieme portretten en sculpturen rond familie, met focus op de ruimte tussen mensen."
+                data-lang-en="Intimate portraits and sculptures about family, focusing on the space between people.">
+            Intieme portretten en sculpturen rond familie, met focus op de ruimte tussen mensen.
+          </span>
+          <a class="mono-link" href="paginas/artists/Pol.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Nora -->
       <figure class="module">
         <img src="assets/img/artists/Nora.jpg" alt="Werk van Nora Mahammed">
         <figcaption class="caption">
           <strong>Nora Mahammed</strong><br>
-          Poëtische, zintuiglijke installaties op het snijvlak van scenografie en architectuur.
-          <a class="mono-link" href="paginas/artists/Nora.html">Lees meer</a>
+          <span data-lang-nl="Poëtische, zintuiglijke installaties op het snijvlak van scenografie en architectuur."
+                data-lang-en="Poetic, sensory installations at the intersection of scenography and architecture.">
+            Poëtische, zintuiglijke installaties op het snijvlak van scenografie en architectuur.
+          </span>
+          <a class="mono-link" href="paginas/artists/Nora.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Jente -->
       <figure class="module">
         <img src="assets/img/artists/Jente.jpg" alt="Werk van Jente Waerzeggers">
         <figcaption class="caption">
           <strong>Jente Waerzeggers</strong><br>
-          Fotograaf/muzikant. Ruwe, directe snapshots van de Belgische muziek- en kunstscene.
-          <a class="mono-link" href="paginas/artists/Jente.html">Lees meer</a>
+          <span data-lang-nl="Fotograaf/muzikant. Ruwe, directe snapshots van de Belgische muziek- en kunstscene."
+                data-lang-en="Photographer/musician. Raw, direct snapshots of the Belgian music and art scene.">
+            Fotograaf/muzikant. Ruwe, directe snapshots van de Belgische muziek- en kunstscene.
+          </span>
+          <a class="mono-link" href="paginas/artists/Jente.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
 
+      <!-- Niels -->
       <figure class="module">
         <img src="assets/img/artists/Niels.jpg" alt="Werk van Niels Poiz">
         <figcaption class="caption">
           <strong>Niels Poiz</strong><br>
-          Taal, performance en editie. Identiteit en popcultuur via appropriation en narratieve installaties.
-          <a class="mono-link" href="paginas/artists/Niels.html">Lees meer</a>
+          <span data-lang-nl="Taal, performance en editie. Identiteit en popcultuur via appropriation en narratieve installaties."
+                data-lang-en="Language, performance and edition. Identity and pop culture through appropriation and narrative installations.">
+            Taal, performance en editie. Identiteit en popcultuur via appropriation en narratieve installaties.
+          </span>
+          <a class="mono-link" href="paginas/artists/Niels.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
         </figcaption>
       </figure>
     </div>
