--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="locaties">
   <div class="container">
     <div class="meta" data-lang-nl="Data & locaties" data-lang-en="Dates & Venues">Data & locaties</div>
-    <h2 data-lang-nl="Locaties" data-lang-en="Venues">Locaties</h2>
+    <h2 data-lang-nl="Data" data-lang-en="Dates">Locaties</h2>
 
     <!-- Opening + RSVP -->
     <article class="tile" style="border:1px solid var(--line); padding:18px; margin-bottom:28px">
